Refactor: PR 리뷰 반영 및 응답 포맷 통일 (#OP-8)
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>